--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/jars/lwjgl.jar"/>
-	<classpathentry kind="lib" path="lib/jars/slick.jar">
+	<classpathentry kind="lib" path="lib/jars/slick.jar" sourcepath="lib/sources/slick_src.zip">
 		<attributes>
+			<attribute name="javadoc_location" value="http://slick.ninjacave.com/javadoc/"/>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="gruppeB3/lib/natives/windows"/>
 		</attributes>
 	</classpathentry>
